syntax = "proto3";

option go_package = "okeysea/micro_x2_cms/api/common";

package microx2cms.common;

message QueryHealth {
  string ping = 1;
}

message ResponseHealth {
  string pong = 1;
}
